--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.xsluck</groupId>
   <artifactId>sm2-jar-sign-maven-plugin</artifactId>
-  <version>0.0.3</version>
+  <version>0.0.5</version>
   <packaging>maven-plugin</packaging>
 
     <name>SM2 JAR Sign Maven Plugin</name>
@@ -30,16 +30,17 @@
         </dependency>
 
         <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk15on</artifactId>
-            <version>1.70</version>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-core</artifactId>
+            <version>${maven.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcpkix-jdk15on</artifactId>
-            <version>1.70</version>
-        </dependency>
+                <groupId>org.zz</groupId>
+                <artifactId>gmhelper</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
     </dependencies>
 
     <build>
